[tool.poetry]
name = "tkmedia"
version = "0.1.2"
description = "Tkinter Media Support."
authors = ["Maruo.S <raspi-maru2004@outlook.jp>"]
license = "MIT"
readme = "README.md"
packages = [
    {include = "media"}
]

[tool.poetry.dependencies]
python = "^3.9"
av = "^15.0.0"
numpy = "^1.26.3"
Pillow = "^10.2.0"
sounddevice = "^0.5.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
